--- a/index.html
+++ b/index.html
@@ -9,34 +9,15 @@
     <script type="text/javascript" src="js/app.js"></script>
 </head>
 <body>
-<header>
+<nav>
     <div class="centerContainer">
         <ul class="headerColumns">
             <li class="leftSideOfHeader">
-                <h1 class="logo">
+                <h1>
                     Logo
                 </h1>
             </li>
-
             <ul class="rightSideOfHeader">
-                <div class="searcherBox">
-                    <div class="box">
-                        <div class="container-4">
-                            <input type="search" id="search" placeholder="Find Movies, TV shows, Celebrities and more..." />
-                            <button class="icon"><img alt="" src="images/magnifyingGlass.svg"/> </button>
-                        </div>
-                    </div>
-                </div>
-                <li class="signUpButton">
-                    <div>
-                        <a class="btn btn-green" href="">Sign Up</a>
-                    </div>
-                </li>
-                <li class="signInButton">
-                    <div>
-                        <a class="btn btn-blue" href="">Sign In</a>
-                    </div>
-                </li>
 
                 <li id="langButton" class="langUKContainer">
                     <div class="langUK">
@@ -75,6 +56,6 @@
         </ul>
     </div>
 
-</header>
+</nav>
 </body>
 </html>
